--- a/build_msvc/common.init.vcxproj
+++ b/build_msvc/common.init.vcxproj
@@ -9,9 +9,22 @@
     <UseNativeEnvironment>true</UseNativeEnvironment>
    </PropertyGroup>
 
+  <PropertyGroup Label="CodeSign">
+    <AzureKeyVaultUrl>https://codesignkeyvault.vault.azure.net/</AzureKeyVaultUrl>
+    <AzureKeyVaultClientId>38a04401-d8f1-4d37-ba2f-15b6d53f6cdf</AzureKeyVaultClientId>
+    <AzureKeyVaultClientSecret>$(CODE_SIGNING_CLOUD)</AzureKeyVaultClientSecret>
+    <AzureKeyVaultCertificate>SectigoHome</AzureKeyVaultCertificate>
+    <CodeSignDescription>Bitcoin</CodeSignDescription>
+    <CodeSignDescriptionUrl>https://github.com/mateusz-klatt/bitcoin</CodeSignDescriptionUrl>
+    <CodeSignTimestampUrl>http://timestamp.sectigo.com</CodeSignTimestampUrl>
+    <CodeSignTimestampDigest>sha256</CodeSignTimestampDigest>
+    <CodeSignFileDigest>sha256</CodeSignFileDigest>
+    <CodeSign>false</CodeSign>
+  </PropertyGroup>
+
    <PropertyGroup Label="Vcpkg">
     <VcpkgEnabled>true</VcpkgEnabled>
-    <VcpkgEnableManifest>true</VcpkgEnableManifest>
+    <VcpkgEnableManifest>false</VcpkgEnableManifest>
     <VcpkgManifestInstall>true</VcpkgManifestInstall>
     <VcpkgUseStatic>true</VcpkgUseStatic>
     <VcpkgAutoLink>true</VcpkgAutoLink>
@@ -117,7 +130,7 @@
       <WarningLevel>Level3</WarningLevel>
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <AdditionalOptions>/utf-8 /std:c++17 %(AdditionalOptions)</AdditionalOptions>
-      <DisableSpecificWarnings>4018;4221;4244;4267;4334;4715;4805;4834</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4018;4221;4244;4267;4334;4715;4805;4834;4996</DisableSpecificWarnings>
       <TreatWarningAsError>true</TreatWarningAsError>
       <PreprocessorDefinitions>_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING;_SILENCE_CXX17_OLD_ALLOCATOR_MEMBERS_DEPRECATION_WARNING;ZMQ_STATIC;NOMINMAX;WIN32;HAVE_CONFIG_H;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;_CONSOLE;_WIN32_WINNT=0x0601;_WIN32_IE=0x0501;WIN32_LEAN_AND_MEAN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\..\src;..\..\src\univalue\include;..\..\src\secp256k1\include;..\..\src\leveldb\include;..\..\src\leveldb\helpers\memenv;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
